remove fig-scripts; rework e8-example; add roadmaps figures

--- a/old-ch03-e8.tex
+++ b/old-ch03-e8.tex
@@ -735,18 +735,18 @@ See research question \label{ques:e8-comparisons}.
 \begin{figure}
    \centering
    % for stats
-   \input{build/e8-world-astar-stats}
-   \input{build/e8-world-wastar-stats}
-   \input{build/e8-world-e8-stats}
+   \input{figs/e8-example/gen/astar-stats}
+   \input{figs/e8-example/gen/wastar-stats}
+   \input{figs/e8-example/gen/e8-stats}
    \begin{subfigure}[t]{0.47\textwidth}
       \centering
-      \includegraphics{build/e8-world-intro}
+      \includegraphics{build/e8-example/gen/intro}
       \caption{intro}
    \end{subfigure}%
    \quad%
    \begin{subfigure}[t]{0.47\textwidth}
       \centering
-      \includegraphics{build/e8-world-astar}
+      \includegraphics{build/e8-example/gen/e8-world-astar}
       \caption{astar\\
          plan: \worldstatsastarplan\\
          exec: \worldstatsastarexec}
@@ -754,7 +754,7 @@ See research question \label{ques:e8-comparisons}.
    \quad%
    \begin{subfigure}[t]{0.47\textwidth}
       \centering
-      \includegraphics{build/e8-world-wastar}
+      \includegraphics{build/e8-example/gen/wastar}
       \caption{wastar, $\epsilon=3$\\
          plan: \worldstatswastarplan\\
          exec: \worldstatswastarexec}
@@ -762,7 +762,7 @@ See research question \label{ques:e8-comparisons}.
    \quad%
    \begin{subfigure}[t]{0.47\textwidth}
       \centering
-      \includegraphics{build/e8-world-e8}
+      \includegraphics{build/e8-example/gen/e8}
       \caption{e8, $\lambda=0.5$\\
          plan: \worldstatseEplan\\
          exec: \worldstatseEexec}
