--- a/proposal-framework.tex
+++ b/proposal-framework.tex
@@ -543,11 +543,11 @@ See Figure~\ref{fig:e8-results} for an example problem.
    %\begin{center}
    
    % for stats
-   \input{build/e8-world-astar-stats}
-   \input{build/e8-world-wastar-stats}
-   \input{build/e8-world-e8-stats}
+   \input{figs/e8-example/gen/astar-stats}
+   \input{figs/e8-example/gen/wastar-stats}
+   \input{figs/e8-example/gen/e8-stats}
    \subfloat[Planning world.]{
-      \includegraphics{build/e8-world-intro}
+      \includegraphics{build/e8-example/gen/intro}
    }
    \quad
    \subfloat[][A$^*$ search.\\
@@ -555,7 +555,7 @@ See Figure~\ref{fig:e8-results} for an example problem.
          Execution Effort: 14.2 \\%\worldstatsastarexec\\
          Total Effort: 706.5
    ]{
-      \includegraphics{build/e8-world-astar}
+      \includegraphics{build/e8-example/gen/astar}
    }
    \vspace{0.05in}
    \subfloat[][Weighted A$^*$ search, $\epsilon=3$\\
@@ -563,7 +563,7 @@ See Figure~\ref{fig:e8-results} for an example problem.
          Execution Effort: 18.5 \\%\worldstatswastarexec\\
          Total Effort: 409.3
    ]{
-      \includegraphics{build/e8-world-wastar}
+      \includegraphics{build/e8-example/gen/wastar}
    }
    \quad
    \subfloat[][E$^8$ search, $\lambda=0.5$\\
@@ -571,7 +571,7 @@ See Figure~\ref{fig:e8-results} for an example problem.
          Execution Effort: 20.5 \\%\worldstatseEexec\\
          Total Effort: 379.3
    ]{
-      \includegraphics{build/e8-world-e8}
+      \includegraphics{build/e8-example/gen/e8}
    }
    
    \caption{A simple 2D explicit graph search problem,
