--- a/proptalk-act1.tex
+++ b/proptalk-act1.tex
@@ -1162,10 +1162,10 @@
       \draw[step=1,black!15,very thin,opacity=\gridopacity] (0,0) grid (12,8);
       
       \node[inner sep=0pt] at (6,4.75) {%
-         \only<1>{\includegraphics[width=5cm]{build/e8-world-intro}}%
-         \only<2>{\includegraphics[width=5cm]{build/e8-world-astar}}%
-         \only<3>{\includegraphics[width=5cm]{build/e8-world-wastar}}%
-         \only<4>{\includegraphics[width=5cm]{build/e8-world-e8}}%
+         \only<1>{\includegraphics[width=5cm]{build/e8-example/gen/intro}}%
+         \only<2>{\includegraphics[width=5cm]{build/e8-example/gen/astar}}%
+         \only<3>{\includegraphics[width=5cm]{build/e8-example/gen/wastar}}%
+         \only<4>{\includegraphics[width=5cm]{build/e8-example/gen/e8}}%
       };
       
       \node[inner sep=0pt] at (6,1) {\begin{minipage}{6cm}\centering%
