--- a/references.bib
+++ b/references.bib
@@ -41,7 +41,7 @@
 
 === From http://www.roboticsproceedings.org/rss03/p30.html ===
 @inproceedings{alterovitz2007stochasticroadmap,
-   author = {R. Alterovitz and T. Simeon and K. Goldberg},
+   author = {R. Alterovitz and T. Sim\'{e}on and K. Goldberg},
    title = {The Stochastic Motion Roadmap: A Sampling Framework for
       Planning with Markov Motion Uncertainty},
    booktitle = {Proceedings of Robotics: Science and Systems},
@@ -779,7 +779,7 @@
 
 === From IEEE Xplore ===
 @inproceedings{jaillet2004dynamicprm,
-   author = {Jaillet, L. and Simeon, T.},
+   author = {Jaillet, L. and Sim\'{e}on, T.},
    booktitle = {Intelligent Robots and Systems, 2004. (IROS 2004).
       Proceedings. 2004 IEEE/RSJ International Conference on},
    title = {A {PRM}-Based Motion Planner for Dynamically Changing
@@ -885,13 +885,13 @@
 
 === From RSS website ===
 @inproceedings{karaman2010rrtstar,
-    author = {S. Karaman and E. Frazzoli},
-    title = {Incremental Sampling-based Algorithms for Optimal Motion
+   author = {S. Karaman and E. Frazzoli},
+   title = {Incremental Sampling-based Algorithms for Optimal Motion
       Planning},
-    booktitle = {Proceedings of Robotics: Science and Systems},
-    year = {2010},
-    address = {Zaragoza, Spain},
-    month = june,
+   booktitle = {Proceedings of Robotics: Science and Systems},
+   year = {2010},
+   address = {Zaragoza, Spain},
+   month = june,
 }
 
 === From sagepub (IJRR) ===
@@ -1074,17 +1074,6 @@
    month = sep,
    pages = {1681-1686},
    doi = {10.1109/IROS.2008.4651075},
-}
-
-=== From http://citeseerx.ist.psu.edu/ ===
-@article{laumond2000visibilityprms,
-   author = {J-p. Laumond and C. Nissoux},
-   title = {Visibility-based probabilistic roadmaps for motion
-      planning},
-   journal = {Journal of Advanced Robotics},
-   year = {2000},
-   volume = {14},
-   pages = {2000},
 }
 
 === Manual ===
@@ -1691,6 +1680,18 @@
    address = {Brooklyn, New York, NY, USA},
    year = {1955},
    pages = {199-203},
+}
+
+=== From http://citeseerx.ist.psu.edu/ ===
+@article{simeon2000visibilityprms,
+   author = {T. Sim\'{e}on and J.P. Laumond and C. Nissoux},
+   title = {Visibility-based probabilistic roadmaps for motion
+      planning},
+   journal = {Journal of Advanced Robotics},
+   year = {2000},
+   volume = {14},
+   number = {6},
+   pages = {477-493},
 }
 
 === From sagepub (IJRR) ===
