add initial dispersion plot

--- a/thesis.tex
+++ b/thesis.tex
@@ -484,6 +484,12 @@ Central point: densified roadmap strategy with good properties.
 Deterministic sampling and dispersion:
 \citep{janson2015deterministicsampling}.
 
+\begin{figure}
+   \centering
+   \includegraphics{build/roadmaps-dispersion/dispersion}
+   \caption{Dispersion plot.}
+\end{figure}
+
 \include{thesis-ch02-lazysp}
 
 \include{thesis-ch03-ibid}
