--- a/references.bib
+++ b/references.bib
@@ -1228,6 +1228,16 @@
    publisher = {MIT Press},
 }
 
+@article{lozanoperezwedley1979collisionfree,
+   author = {Tom\'as Lozano-P\'erez and M. A. Wesley},
+   title = {An Algorithm for Planning Collison-Free Paths Among
+      Polyhedral Obstacles},
+   year = {1979},
+   journal = {Communications of the ACM},
+   volume = {22},
+   pages = {560--570},
+}
+
 === From IEEE Xplore ===
 @article{lozanoperez1983cspace,
    author = {Lozano-P{\'e}rez, Tom\'{a}s},
@@ -1626,6 +1636,18 @@
    year = {2013},
    month = jun,
    address = {Berlin, Germany},
+}
+
+=== Manual ===
+@article{schwartzsharir1983pianomovers1,
+   author = {Schwartz, Jacob T. and Sharir, Micha},
+   title = {On the Piano Movers' Problem: I. The case of a
+      two-dimensional rigid polygonal body moving amidst polygonal
+      barriers},
+   year = {1983},
+   journal = {Communications on Pure and Applied Mathematics},
+   volume = {36},
+   pages = {345--398},
 }
 
 === Manual ===
