--- a/thesis-ch05-lemur.tex
+++ b/thesis-ch05-lemur.tex
@@ -1088,7 +1088,7 @@ We used the FCL collision checker \citep{jiapan2012fcl} with a
 resolution of 0.01 rad.
 We considered three single-query instances in a tabletop
 manipulation scenario
-(scene from Figure~\ref{fig:herbarmmultithread-master})
+%(scene from Figure~\ref{fig:herbarmmultithread-master})
 and three single-query instances from a bookshelf scenario
 (Figure~\ref{fig:filmstrip}).
 Planners were evaluated against a range of utility functions
