--- a/thesis.tex
+++ b/thesis.tex
@@ -250,13 +250,15 @@ Problem description.
 Concise statement of objectives.
 
 \noindent
-Problem characterization:
-\begin{itemize}
-\item Semi-structured (some things stay the same).
-\item Collision checking is expensive.
-\end{itemize}
-
+Problem characterization.
 What makes the problem difficult?
+\begin{itemize}
+\item Worlds are semi-structured (some things stay the same).
+\item Collision checking is expensive.
+\item Planning and execution cost are both important.
+\item Must plan several steps ahead.
+\item Words are dynamic (plans must be updated).
+\end{itemize}
 
 Focus on evaluation on real-world problems,
 not contrived examples or asymptotic complexity.
@@ -308,326 +310,17 @@ Propositional logic.
 \section{Review of Experimental Platforms}
 
 Throughout, we will run experiments on three experimental platforms:
-HERB, PR2, and CHIMP.
+HERB, CHIMP, and IRB4400.
 
-\chapter{Roadmap Methods for Motion Planning}
-\label{chap:roadmaps}
+\include{thesis-ch02-roadmaps}
 
-The motion planning problem is a fundamental problem in robotics.
-This chapter describes the motion planning problem,
-and provides an overview of a well-studied class of algorithms called
-roadmap methods.
-We focus only on the parts that are relevant to this thesis;
-for a more comprehensive treatment,
-see LaValle \citep{lavalle2006planningbook}.
+\include{thesis-ch03-lazysp}
 
-\section{The Motion Planning Problem}
+\include{thesis-ch04-ibid}
 
-The most fundamental form of the \emph{motion planning problem},
-which is a generalization of the \emph{piano mover's problem},
-entails x y and z.
-All about geometry, valid/invalid poses.
-Find a solution, or determine that no solution exists.
+\include{thesis-ch05-lemur}
 
-The generalization called the \emph{motion planning problem}
-deals with configuration spaces.
-We can deal with articulated mechanisms,
-which we focus on in this thesis.
-It is fundamental to robotics.
-
-Define $\mathcal{C}_{\ms{free}}$.
-Compact sets.
-
-A solution is called a path.
-
-What are its properties?
-
-\begin{itemize}
-\item The space is continuous.
-\item Solutions are continuous (and there are an infinite set of them).
-\end{itemize}
-
-\subsection{Optimal Motion Planning}
-
-The optimal motion planning problem is a generalization which
-includes a metric over solution paths.
-
-\subsection{Further Generalizations}
-
-There are other generalizations such as kinodynamic planning.
-Here, a solution is commonly called a trajectory.
-Optimal variants may have costs on the actions as well.
-Intro: focus on configuration-space planning (not kinodynamic planning).
-
-What about constraints? We won't deal with these much either.
-
-\section{Motion Planning by Discretizing C-Space}
-
-\subsection{Testing Validity of Motions}
-
-Well, there are exact algorithms.
-Exact methods in low-dimensional spaces.
-The key point here is that these methods do not rely on discretization
-of the configuration space.
-But representing C-space obstacles is too hard.
-Instead, we validate paths via lifting samples
-into 3D space and testing them.
-Relate to term ``sampling-based methods.''
-
-Talk about committing to a resolution to test with,
-which is what we do in this thesis.
-Note that this is only an approximation.
-You should pad your obstacles so you don't plan through wires.
-But also link to C-space bubble stuff.
-
-Define the path indicator function.
-
-\subsection{Graphs in C-Space}
-
-Due to the way we test paths for validity,
-it is natural to explore algorithms which build larger paths
-out of smaller ones.
-We focus on algorithms that approximate C-space via graphs.
-Talk about discretizing states.
-
-There are other ways that don't discretize C-Space this way.
-E.g. optimizataion approaches (CHOMP, TrajOpt) which require
-stronger world descriptions (SDFs, convex obstacle decompositions).
-
-The key point of this section is whether the algorithm commits to
-a discretization a priori,
-or whether the graph is built incrementally in response to the
-distribution of valid or costly states.
-
-\subsection{Resolution and Probabalistic Completeness}
-
-Of course, the discretization is always just an approximation
-of the actual C-space.
-Hopefully, you can choose a discretization strategy that allows your
-algorithm to have one or both of these forms of completeness.
-
-\section{Obstacle-Insensitive Discretizations}
-
-So we've decided to build graphs in C-space to answer motion planning
-queries.
-The next question is what should characterize our approach.
-
-We focus on discretizations that are obstacle-insensitive.
-Here's why.
-
-\subsection{Obstacle Insensitive Approaches}
-
-The most straightforward discretezation strategy.
-Commit to a graph structure a priori.
-
-Examples (we'll talk a lot more about this in the next section).
-\begin{itemize}
-\item Lattices (Graph search methods, A*, etc).
-\item RGGs (PRMs, FMT* \citep{janson2015fmtstar},
-   BIT* \citep{gammell2015bitstar}).
-\item Halton graphs.
-\end{itemize}
-
-What about densification? (aka adaptive discretization)
-
-\subsection{Obstacle Sensitive Approaches}
-
-Many approaches build graphs incrementally in response to the
-obstacle distribution.
-
-RRT.
-
-Visibility PRMs \citep{simeon2000visibilityprms}.
-
-Smart sampling strategies.
-Talk about sampling heuristics.
-The original PRM.
-Lots of other things.
-
-Expansive spaces.
-ESTs. Expansive spaces. \citep{hsu1997expansive}.
-
-Usually, densification comes for free.
-
-Probabalistic completeness.
-
-\subsection{Conclusion}
-
-Of course, lots of planners do both.
-Often, use sensitivity for better performance,
-and mix in some insensitivity for completeness properties.
-
-Talk about adaptive discretization.
-
-Bonus of obstacle insensitivity: caching, parallelization.
-Central point: by staying obstacle-agnostic, it's easier to cache
-things that apply across problem instances.
-
-But what type of obstacle-insensitive discretezation strategy should
-we use?
-
-\section{Determinism vs. Probabalisticness}
-
-OK, so we've committed to an obstacle-insensitive discretization
-strategy.
-What type of graph should we choose?
-
-\begin{figure}
-   \centering
-   \includegraphics{build/roadmaps/gen/aagrid}
-   \includegraphics{build/roadmaps/gen/rgg}
-   \includegraphics{build/roadmaps/gen/halton}
-   \caption{Examples of roadmap types over the unit square
-      (axis-aligned lattice, RGG, and Halton graphs).
-      In this case, all roadmaps have a connection radius of 0.3.}
-\end{figure}
-
-Probabalistic vs. deterministic.
-\citep{branicky2002detvsprobroadmaps}.
-\citep{lavalle2002gridprms}.
-
-\citep{janson2015deterministicsampling}.
-
-Talk about probabalistic completeness and resolution completeness
-\citep{cheng2004rescomplete}.
-
-RRT* \citep{karaman2010rrtstar}.
-Karaman/Frazzoli \citep{karaman2011samplingoptimal}.
-
-RGGs.
-
-Central point: densified roadmap strategy with good properties.
-
-\subsection{Dispersion}
-
-Deterministic sampling and dispersion:
-\citep{janson2015deterministicsampling}.
-
-\begin{figure}
-   \centering
-   \includegraphics{build/roadmaps-dispersion/dispersion}
-   \caption{Dispersion plot.}
-\end{figure}
-
-\include{thesis-ch02-lazysp}
-
-\include{thesis-ch03-ibid}
-
-\include{thesis-ch04-lemur}
-
-\chapter{Planning over Configuration Space Families}
-\label{chap:family}
-
-\begin{figure}
-   \centering
-   \hspace{0.2cm}
-   \includegraphics[width=2.7cm]{figs/herbarmmultithread/herbarmmultithread-step0.png}%
-   \;
-   \includegraphics[width=2.7cm]{figs/herbarmmultithread/herbarmmultithread-step1.png}%
-   \;
-   \includegraphics[width=2.7cm]{figs/herbarmmultithread/herbarmmultithread-step2.png}%
-   
-   \includegraphics{build/herbarmmultithread/master-fig}
-   \caption[]{
-      Results from a motion planning experiment for manipulation
-      planning in which the robot must move to grasp the mug
-      and place it into a bin at its side
-      before returning to its initial configuration.
-      In the course of planning the first step to the grasp point,
-      the planner has discovered a number of edges known to be
-      valid.
-      After the grasp, the robot must find a motion to transfer the
-      mug -- any edges known to be valid in the previous step
-      can be used after only checking that the grasped mug does not
-      collide with the environment.
-      Compared with a sequence of single-query calls to LEMUR
-      with model $\mathcal{C}_{\ms{simple}}$
-      \protect\tikz{\protect\node[fill=black!80,draw=black]{};},
-      LEMUR armed with the $\mathcal{M}_{\ms{family}}$ ensemble
-      cost model
-      \protect\tikz{\protect\node[fill=cyan,draw=black]{};}
-      can guide the planner to use edges that are less
-      expensive to validate.}
-   \label{fig:herbarmmultithread-master}
-\end{figure}
-
-When addressing multi-step tasks
-such as the table clearing task in
-Figure~\ref{fig:herbarmmultithread-master},
-the robot's valid subset $\mathcal{C}_{\ms{free}}$
-changes each time an object is grasped or placed,
-or when people or obstacles move.
-Over the course of a planning episode,
-these changing subsets constitute a family of related sets over
-$\mathcal{C}$.
-Approaches which adapt a graph or tree structure
-\citep{ferguson2006drrt, gayle2007lazyreconfigforest}
-do not reason about this structure directly.
-LEMUR relies on a domain-specific ensemble cost model
-$\mathcal{M}$ to provide it with planning and execution cost
-estimates for prospective edges.
-This allows it to exploit this domain-specific structure.
-
-For example,
-consider the case where the robot has already evaluated a number
-of roadmap edges in order to find a valid path to grasp the red mug.
-Once grasped, the active valid subset $\mathcal{C}_{\ms{free}}$
-has changed.
-However,
-any edge known to be valid for the previous step
-can be validated in the new subset by simply checking the grasped
-mug against the environment.
-
-We capture this structure via an ensemble cost model
-$\mathcal{M}_{\ms{family}}$.
-The model maintains
-(a) a family $\mathcal{F}$ of $\mathcal{C}$-subsets
-relevant to the problem,
-(b) the inclusion/intersection relations between them,
-and (c) the set of validity checks that have been performed
-for each edge.
-This knowledge enables it to implement an edge
-planning cost estimator $\grave{p}_{\ms{family}}(e)$
-which determines the minimum set of collision checks necessary
-to validate an edge within a target subset.
-
-We show preliminary results of applying LEMUR to planning over
-such $\mathcal{C}$-space families on the sequential
-three-step task in
-Figure~\ref{fig:herbarmmultithread-master}.
-Such a planner can be seen as a generalization of self-collision checked
-\citep{leven2002changing} or dynamic \citep{jaillet2004dynamicprm}
-roadmaps to a larger number of subsets.
-
-\section{Sources of Configuration Space Families}
-
-\section{Optimistic Checks via the Family Graph}
-
-\chapter{Applications}
-
-\section{Caching Invariant Geometry}
-
-\begin{figure*}
-   \centering   
-   \includegraphics{build/family-sq-caching/pvxs}
-   \caption[]{LEMUR single-query results on several HERB problems,
-      all using baked calls.
-      Traces are LEMUR
-      (\protect\tikz{\protect\draw[thick,black] (0,0) -- (0.15,0.15);}),
-      the family planner (no caching)
-      (\protect\tikz{\protect\draw[thick,blue] (0,0) -- (0.15,0.15);}),
-      or the family planner with self-checked caching
-      (\protect\tikz{\protect\draw[thick,green] (0,0) -- (0.15,0.15);}).}
-\end{figure*}
-
-\section{Multi-Step Manipulation Tasks}
-
-\section{Exploiting Conservative Geometric Approximations}
-
-\chapter{Discussion}
-
-Here is a conclusion.
-
+\include{thesis-ch06-family}
 
 \appendix
 
