--- a/thesis-ch06-family.tex
+++ b/thesis-ch06-family.tex
@@ -88,6 +88,23 @@ multi-step manipulation tasks that must be planned into the future.
 
 Semi-structured environments between queries.
 
+\begin{figure}
+   \centering
+   \begin{tikzpicture}
+      \node at (0,0) {\includegraphics{build/family-composite/plot-volumes}};
+      \node at (5,0) {\includegraphics{build/family-composite/plot-volumes-individual}};
+   \end{tikzpicture}
+   \caption{Volumes.}
+\end{figure}
+
+\begin{figure}
+   \centering
+   \begin{tikzpicture}
+      \node at (0,0) {\includegraphics{build/family-composite/plot-g-manifold}};
+   \end{tikzpicture}
+   \caption{A feasible transfer path.}
+\end{figure}
+
 \subsection{Example Problems}
 
 Manipulation problems.
