--- a/thesis-ch06-family.tex
+++ b/thesis-ch06-family.tex
@@ -100,10 +100,27 @@ Semi-structured environments between queries.
 \begin{figure}
    \centering
    \begin{tikzpicture}
+      \node at (0,0) {\includegraphics{build/family-composite/plot-ptop-manifold}};
+   \end{tikzpicture}
+   \caption{First transit manifold.}
+\end{figure}
+
+\begin{figure}
+   \centering
+   \begin{tikzpicture}
       \node at (0,0) {\includegraphics{build/family-composite/plot-g-manifold}};
    \end{tikzpicture}
    \caption{A feasible transfer path.}
 \end{figure}
+
+\begin{figure}
+   \centering
+   \begin{tikzpicture}
+      \node at (0,0) {\includegraphics{build/family-composite/plot-pbottom-manifold}};
+   \end{tikzpicture}
+   \caption{Second transit manifold.}
+\end{figure}
+
 
 \subsection{Example Problems}
 
