--- a/thesis-ch06-family.tex
+++ b/thesis-ch06-family.tex
@@ -97,29 +97,15 @@ Semi-structured environments between queries.
    \caption{Volumes.}
 \end{figure}
 
-\begin{figure}
+\begin{figure*}
    \centering
    \begin{tikzpicture}
       \node at (0,0) {\includegraphics{build/family-composite/plot-ptop-manifold}};
+      \node at (5.5,0) {\includegraphics{build/family-composite/plot-g-manifold}};
+      \node at (11,0) {\includegraphics{build/family-composite/plot-pbottom-manifold}};
    \end{tikzpicture}
-   \caption{First transit manifold.}
-\end{figure}
-
-\begin{figure}
-   \centering
-   \begin{tikzpicture}
-      \node at (0,0) {\includegraphics{build/family-composite/plot-g-manifold}};
-   \end{tikzpicture}
-   \caption{A feasible transfer path.}
-\end{figure}
-
-\begin{figure}
-   \centering
-   \begin{tikzpicture}
-      \node at (0,0) {\includegraphics{build/family-composite/plot-pbottom-manifold}};
-   \end{tikzpicture}
-   \caption{Second transit manifold.}
-\end{figure}
+   \caption{The trajectory projections.}
+\end{figure*}
 
 
 \subsection{Example Problems}
