switch lemur-sq herb bookshelf 2 to nom, add workcell data/plots

--- a/figs/lemur-sq/herb-master.tex
+++ b/figs/lemur-sq/herb-master.tex
@@ -10,7 +10,7 @@
    {herbbin2nom/6.0/10},
    {herbbookshelf0/9.0/30},
    {herbbookshelf1nom/12.0/30},
-   {herbbookshelf2/15.0/30}}
+   {herbbookshelf2nom/15.0/30}}
 {
    \begin{scope}[shift={(\xoffset,0.0)}]
    \begin{axis}[
