--- a/figs/multistep-prescribed/herbbin.tex
+++ b/figs/multistep-prescribed/herbbin.tex
@@ -12,21 +12,61 @@
    ylabel near ticks,
    xmin=0,
    ]
-      
+   
+   % old/new rrt results
    \addplot
-      plot[color=blue,mark options={color=blue},mark options={scale=0.5}]
+      plot[color=purple,mark options={color=purple},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-lemurhaltonofflldens10000,2.0-lambda.txt};
+      {data/multistep-prescribed/old-stats-byparam-herbbin-rrtconnect-default.txt};
    
    \addplot
-      plot[color=green,mark options={color=green},mark options={scale=0.5}]
-      table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-familyhaltonofflldens10000,2.0-lambda.txt};
-
-   \addplot
-      plot[color=red,mark options={color=green},mark options={scale=0.5}]
+      plot[color=red,mark options={color=red},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
       {data/multistep-prescribed/stats-byparam-herbbin-rrtconnect-default.txt};
+   
+   % old incbi results
+   \addplot
+      plot[color=teal,densely dotted,mark options={color=teal},mark options={scale=0.5}]
+      table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/old-stats-byparam-herbbin-lemurhaltonofflldens10000,2.0-lambda.txt};
+   \addplot
+      plot[color=teal,solid,mark options={color=teal},mark options={scale=0.5}]
+      table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/old-stats-byparam-herbbin-familyhaltonofflldens10000,2.0-lambda.txt};
+   
+   % incbi results
+   \addplot
+      plot[color=blue,densely dotted,mark options={color=blue},mark options={scale=0.5}]
+      table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-incbi-lambda.txt};
+   \addplot
+      plot[color=blue,solid,mark options={color=blue},mark options={scale=0.5}]
+      table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-herbbin-family-incbi-lambda.txt};
+   
+   % astar results
+   \addplot
+      plot[color=olive,densely dotted,mark options={color=olive},mark options={scale=0.5}]
+      table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-astar-lambda.txt};
+   \addplot
+      plot[color=olive,solid,mark options={color=olive},mark options={scale=0.5}]
+      table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-herbbin-family-astar-lambda.txt};
+   
+   % lpastar results
+   \addplot
+      plot[color=cyan,densely dotted,mark options={color=cyan},mark options={scale=0.5}]
+      table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-lpastar-lambda.txt};
+   \addplot
+      plot[color=cyan,solid,mark options={color=cyan},mark options={scale=0.5}]
+      table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-herbbin-family-lpastar-lambda.txt};
+   
+   
+   
+   
 
 \end{axis}
 \end{tikzpicture}
